# email-triage-openenv-v2

./: README.md  main.py  pyproject.toml
server/: app.py
