[project]
name = "email-triage-openenv"
version = "0.1.0"
description = "Smart Email Triage OpenEnv Environment"
authors = [
    { name = "Mohammed Owais" }
]
dependencies = [
    "fastapi",
    "uvicorn",
    "requests"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.openenv]
entrypoint = "main:app"
