[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "email-triage-openenv"
version = "0.1.0"
description = "Smart Email Triage OpenEnv Environment"
authors = [{ name = "Mohammed Owais" }]
dependencies = [
    "fastapi",
    "uvicorn",
    "requests",
    "openenv>=0.2.0"
]

[project.scripts]
start = "app.main:app"

[tool.openenv]
entrypoint = "app.main:app"
